--- a/homePage.html
+++ b/homePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styleHomePage.css"/>
-    <title>Style Design SRL</title>
+    <title>Style Design SR</title>
     <link rel="icon" type="image/x-icon" href="icon.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
